force-app/main/default/objects/Call__c/Call__c.object-meta.xml
<CustomObject>
    <label>通话历史</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>