force-app/main/default/objects/Call__c/fields/TextTest2__c.field-meta.xml
<CustomField>
    <fullName>TextTest2__c</fullName>
    <label>文本测试字段</label>
    <length>40</length>
    <type>Text</type>
</CustomField>