force-app/main/default/objects/Call__c/fields/TextTest__c.field-meta.xml
<CustomField>
    <fullName>TextTest__c</fullName>
    <label>文本测试字段(元数据修改为长文本区)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>